# strategy-lab

./: .gitignore  .gitmodules  README.md  catan.html  index.html  pyproject.toml
css/: catan-lab.css  style.css
doppelkopf/: .gitignore  README.md  __init__.py  ai_test.py  bots.py  bots_test.py  cards.py  cli.py  doppelkopf_test.py  game.py  policy.py  scoring.py  search.py  train.py  web.py  web_test.py  worlds.py
doppelkopf/checkpoints/: master.json  master.npz  metrics.jsonl
doppelkopf/static/: app.js  index.html  style.css
js/: catan-lab.js  engine.js  env-play.js  gym-games.js  mdp.js  play.js  ui.js
js/games/: catan-board.js  maedn.js  monopoly.js  snakes.js  tictactoe.js
rust_cli_implementation/: Cargo.toml  README.md
rust_cli_implementation/catan-server/: app.py  policy.py
rust_cli_implementation/examples/: catan_smoke.rs
rust_cli_implementation/scripts/: catan-server.sh
rust_cli_implementation/src/: app.rs  cards.rs  engine.rs  lib.rs  main.rs  rl.rs  rng.rs  selftest.rs  symmetry.rs
rust_cli_implementation/src/catan/: client.rs  mod.rs
rust_cli_implementation/src/game/: mod.rs  nim.rs  tictactoe.rs
rust_cli_implementation/src/ui/: catan.rs  mod.rs  strategy.rs  symmetry.rs  value.rs
server/: app.py  envs.py  policy.py  test_envs.py  test_gym_api.py  test_policy.py
test/: smoke.js
tools/: dump_catan_board.py
