[project]
name = "strategy-lab"
version = "0.1.0"
description = "Strategy Lab — design the policy, don't play the moves. Catan runs on the catanatron engine."
requires-python = ">=3.11"
dependencies = [
    "catanatron",
    "flask",
    "flask-cors",
    "gymnasium",
]

# catanatron and gymnasium are vendored in this repo; install them editable from
# the local paths so the vendored source drives every rule / env registration.
[tool.uv.sources]
catanatron = { path = "catanatron", editable = true }
gymnasium = { path = "Gymnasium", editable = true }

# strategy-lab itself is an application, not a library to build/install.
[tool.uv]
package = false
